--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -181,6 +181,10 @@
                 </div>
 
                 <div class="checkbox options-advanced">
+                    <label><input type="checkbox" data-setting="general.usePopupWindow"> Use a native popup window when scanning text on web pages</label>
+                </div>
+
+                <div class="checkbox options-advanced">
                     <label><input type="checkbox" data-setting="general.useSecurePopupFrameUrl"> Use secure popup frame URL</label>
                 </div>
 
