--- a/ext/bg/background.html
+++ b/ext/bg/background.html
@@ -37,6 +37,7 @@
         <script src="/bg/js/profile-conditions.js"></script>
         <script src="/bg/js/request-builder.js"></script>
         <script src="/bg/js/template-renderer.js"></script>
+        <script src="/bg/js/simple-dom-parser.js"></script>
         <script src="/bg/js/text-source-map.js"></script>
         <script src="/bg/js/translator.js"></script>
         <script src="/bg/js/util.js"></script>
