Move TextToSpeechAudio to a separate file (#800)

--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -89,6 +89,7 @@
         <script src="/mixed/js/scroll.js"></script>
         <script src="/mixed/js/text-scanner.js"></script>
         <script src="/mixed/js/template-handler.js"></script>
+        <script src="/mixed/js/text-to-speech-audio.js"></script>
 
         <script src="/bg/js/query-parser-generator.js"></script>
         <script src="/bg/js/query-parser.js"></script>
