--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -1172,6 +1172,7 @@
         <script src="/mixed/js/dom-data-binder.js"></script>
         <script src="/mixed/js/object-property-accessor.js"></script>
         <script src="/mixed/js/task-accumulator.js"></script>
+        <script src="/mixed/js/text-to-speech-audio.js"></script>
 
         <script src="/bg/js/anki.js"></script>
         <script src="/bg/js/anki-note-builder.js"></script>
