Use Anki classes directly in Display (#804)
* Add _getTemplates function

* Add template renderer to display pages

* Add AnkiNoteBuilder to Display

* Update AnkiTemplatesController to directly use TemplateRenderer

* Remove old APIs

--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -91,6 +91,9 @@
         <script src="/mixed/js/template-handler.js"></script>
         <script src="/mixed/js/text-to-speech-audio.js"></script>
 
+        <script src="/bg/js/anki-note-builder.js"></script>
+        <script src="/bg/js/template-renderer.js"></script>
+
         <script src="/bg/js/query-parser-generator.js"></script>
         <script src="/bg/js/query-parser.js"></script>
         <script src="/bg/js/clipboard-monitor.js"></script>
