--- a/ext/fg/float.html
+++ b/ext/fg/float.html
@@ -44,6 +44,8 @@
             </div>
         </div>
 
+        <script src="/mixed/lib/handlebars.min.js"></script>
+
         <script src="/mixed/js/core.js"></script>
         <script src="/mixed/js/yomichan.js"></script>
         <script src="/mixed/js/comm.js"></script>
@@ -65,6 +67,9 @@
         <script src="/mixed/js/text-scanner.js"></script>
         <script src="/mixed/js/template-handler.js"></script>
         <script src="/mixed/js/text-to-speech-audio.js"></script>
+
+        <script src="/bg/js/anki-note-builder.js"></script>
+        <script src="/bg/js/template-renderer.js"></script>
 
         <script src="/bg/js/query-parser-generator.js"></script>
         <script src="/bg/js/query-parser.js"></script>
