Dictionary controller refactor (#831)
* Create new DictionaryController

* Update input disabling when modifying the database

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -653,7 +653,7 @@
 
                 <div class="form-group" id="dict-main-group">
                     <label for="dict-main">Main dictionary for merged mode</label>
-                    <select class="form-control" id="dict-main"></select>
+                    <select class="form-control" id="dict-main" data-setting="general.mainDictionary"></select>
                 </div>
 
                 <div class="text-danger" id="dict-purge" hidden>Dictionary data is being purged, please be patient...</div>
@@ -678,8 +678,9 @@
                         for use with this extension and to learn about importing proprietary EPWING dictionaries.
                     </p>
                     <div>
-                        <button class="btn btn-primary" id="dict-file-button">Import Dictionary</button>
-                        <button class="btn btn-danger" id="dict-purge-button">Purge Database</button>
+                        <button class="btn btn-primary dictionary-modifying-input" id="dict-file-button">Import Dictionary</button>
+                        <button class="btn btn-danger dictionary-modifying-input" id="dict-purge-button">Purge Database</button>
+                        <button class="btn btn-default dictionary-modifying-input" id="dict-check-integrity">Check integrity</button>
                     </div>
                     <div hidden><input type="file" id="dict-file" accept=".zip,application/zip" multiple></div>
                 </div>
@@ -727,7 +728,7 @@
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                                <button type="button" class="btn btn-danger" id="dict-delete-confirm">Delete Dictionary</button>
+                                <button type="button" class="btn btn-danger dictionary-modifying-input" id="dict-delete-confirm">Delete Dictionary</button>
                             </div>
                         </div>
                     </div>
@@ -756,7 +757,7 @@
                     </div>
                     <div class="dict-delete-table">
                         <div>
-                            <button class="btn btn-default dict-delete-button">Delete Dictionary</button>
+                            <button class="btn btn-default dict-delete-button dictionary-modifying-input">Delete Dictionary</button>
                         </div>
                         <div>
                             <div class="progress" hidden>
