Audio system refactor (#858)
* Refactor AudioUriBuilder

* Add downloadAudio function

* Refactor AudioSystem

* Update API usage

* Rename file

* Update scripts

* Add prepare calls

--- a/ext/bg/background.html
+++ b/ext/bg/background.html
@@ -22,13 +22,12 @@
         <script src="/mixed/js/environment.js"></script>
         <script src="/mixed/js/japanese.js"></script>
 
-        <script src="/mixed/js/audio-system.js"></script>
         <script src="/mixed/js/cache-map.js"></script>
         <script src="/mixed/js/dictionary-data-util.js"></script>
         <script src="/mixed/js/object-property-accessor.js"></script>
 
         <script src="/bg/js/anki.js"></script>
-        <script src="/bg/js/audio-uri-builder.js"></script>
+        <script src="/bg/js/audio-downloader.js"></script>
         <script src="/bg/js/clipboard-monitor.js"></script>
         <script src="/bg/js/clipboard-reader.js"></script>
         <script src="/bg/js/database.js"></script>
