--- a/ext/fg/float.html
+++ b/ext/fg/float.html
@@ -50,6 +50,7 @@
         <script src="/mixed/js/api.js"></script>
         <script src="/mixed/js/japanese.js"></script>
 
+        <script src="/mixed/js/cache-map.js"></script>
         <script src="/mixed/js/document-util.js"></script>
         <script src="/fg/js/dom-text-scanner.js"></script>
         <script src="/fg/js/source.js"></script>
