Media utility refactor (#859)
* Move loadImageBase64 into DictionaryImporter

* Convert mediaUtility to a class

* Add getFileExtensionFromImageMediaType to MediaUtility

* Use MediaUtility instead of _getImageExtensionFromMediaType

* Use MediaUtility in ClipboardReader to validate images before reading

--- a/ext/bg/background.html
+++ b/ext/bg/background.html
@@ -35,6 +35,7 @@
         <script src="/bg/js/dictionary-database.js"></script>
         <script src="/bg/js/json-schema.js"></script>
         <script src="/bg/js/mecab.js"></script>
+        <script src="/bg/js/media-utility.js"></script>
         <script src="/bg/js/options.js"></script>
         <script src="/bg/js/profile-conditions.js"></script>
         <script src="/bg/js/request-builder.js"></script>
