--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -414,6 +414,16 @@
                     <label><input type="checkbox" id="deep-dom-scan" data-setting="scanning.deepDomScan"> Deep content scan</label>
                 </div>
 
+                <div class="checkbox options-advanced">
+                    <strong>Prevent middle mouse button actions on:</strong>
+                    <div style="margin-left: 1em;">
+                    <label><input type="checkbox" id="deep-dom-scan" data-setting="scanning.preventMiddleMouse.onWebPages"> Webpages</label><br>
+                    <label><input type="checkbox" id="deep-dom-scan" data-setting="scanning.preventMiddleMouse.onPopupPages"> Popups</label><br>
+                    <label><input type="checkbox" id="deep-dom-scan" data-setting="scanning.preventMiddleMouse.onSearchPages"> Search page</label><br>
+                    <label><input type="checkbox" id="deep-dom-scan" data-setting="scanning.preventMiddleMouse.onSearchQuery"> Search query</label><br>
+                    </div>
+                </div>
+
                 <div class="form-group options-advanced">
                     <div class="row">
                         <div class="col-xs-6">
