Split source.js into two files (#894)

--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -78,7 +78,8 @@
         <script src="/mixed/js/cache-map.js"></script>
         <script src="/mixed/js/document-util.js"></script>
         <script src="/fg/js/dom-text-scanner.js"></script>
-        <script src="/fg/js/source.js"></script>
+        <script src="/fg/js/text-source-range.js"></script>
+        <script src="/fg/js/text-source-element.js"></script>
         <script src="/mixed/js/audio-system.js"></script>
         <script src="/mixed/js/dictionary-data-util.js"></script>
         <script src="/mixed/js/display.js"></script>
