--- a/ext/bg/settings-popup-preview.html
+++ b/ext/bg/settings-popup-preview.html
@@ -129,7 +129,8 @@
         <script src="/mixed/js/document-util.js"></script>
         <script src="/fg/js/dom-text-scanner.js"></script>
         <script src="/fg/js/popup.js"></script>
-        <script src="/fg/js/source.js"></script>
+        <script src="/fg/js/text-source-range.js"></script>
+        <script src="/fg/js/text-source-element.js"></script>
         <script src="/fg/js/popup-factory.js"></script>
         <script src="/fg/js/frontend.js"></script>
         <script src="/fg/js/frame-offset-forwarder.js"></script>
