--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -1213,6 +1213,7 @@
         <script src="/mixed/js/dictionary-data-util.js"></script>
         <script src="/mixed/js/document-util.js"></script>
         <script src="/mixed/js/dom-data-binder.js"></script>
+        <script src="/mixed/js/html-template-collection.js"></script>
         <script src="/mixed/js/object-property-accessor.js"></script>
         <script src="/mixed/js/task-accumulator.js"></script>
         <script src="/mixed/js/text-to-speech-audio.js"></script>
