Further generalize storage controller by supporting lists of nodes (#906)

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -805,7 +805,7 @@
                 </div>
 
                 <div id="storage-use" hidden>
-                    <p class="help-block" id="storage-use-undefined">
+                    <p class="help-block" id="storage-use-invalid">
                         Yomichan is using an indeterminate amount of storage.
                     </p>
                     <p class="help-block" id="storage-use-finite" hidden>
