Storage controller refactor (#907)
* Use array for use/quota nodes

* Use classes instead of ids

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -805,13 +805,13 @@
                 </div>
 
                 <div id="storage-use" hidden>
-                    <p class="help-block" id="storage-use-invalid">
+                    <p class="help-block" class="storage-use-invalid">
                         Yomichan is using an indeterminate amount of storage.
                     </p>
-                    <p class="help-block" id="storage-use-finite" hidden>
-                        Yomichan is using approximately <strong id="storage-usage"></strong> of <strong id="storage-quota"></strong>.
+                    <p class="help-block" class="storage-use-finite" hidden>
+                        Yomichan is using approximately <strong class="storage-usage"></strong> of <strong class="storage-quota"></strong>.
                     </p>
-                    <p class="help-block" id="storage-use-infinite" hidden>
+                    <p class="help-block" class="storage-use-infinite" hidden>
                         Yomichan is permitted <strong>unlimited storage</strong>.
                     </p>
                 </div>
