Add modal controller class (#908)
* Add ModalController

* Use modalController instead of new Modal

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -1246,6 +1246,7 @@
         <script src="/bg/js/settings/dictionary-controller.js"></script>
         <script src="/bg/js/settings/dictionary-import-controller.js"></script>
         <script src="/bg/js/settings/generic-setting-controller.js"></script>
+        <script src="/bg/js/settings/modal-controller.js"></script>
         <script src="/bg/js/settings/popup-preview-controller.js"></script>
         <script src="/bg/js/settings/profile-controller.js"></script>
         <script src="/bg/js/settings/scan-inputs-controller.js"></script>
